--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <a href="/">Home</a>
-        <% if (user) { %>
-            <a href="/blogposts/">Create Post</a>
-            <p>Logged In as <%- user.email %></p>
-            <a href="/users/logout">Log Out</a>
-        <% } else { %>
-            <form action="/users/login" method="post">
-                <label for="email">Email</label>
-                <input type="email" id="username" name="username" />
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" />
-                <input type="submit" value="Log In" />
-            </form>
-        <% } %>
+        <h1>Blog Api | The Odin Project</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
