--- a/views/singlepost.ejs
+++ b/views/singlepost.ejs
@@ -7,7 +7,7 @@
     <input type="email" name="email" id="email" />
     <label for="commentBody">Comment:</label>
     <textarea name="commentBody" id="commentBody"></textarea>
-    <input type="hidden" name="publicform" value="true">
+    <input type="hidden" name="userform" value="true">
     <input type="submit" value="Add Comment" />
   </form>
   <script>
