--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,8 @@
     <h1>Blog API | The Odin Project</h1>
     <h2>Admin Login</h2>
     <form action="" method="POST">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" />
+        <label for="username">Email:</label>
+        <input type="email" name="username" id="username" />
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" />
         <input type="submit" value="login" />
